--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -6,6 +6,7 @@ loglevel = Info
 port = 9000
 
 ; The remote endpoint where requests are forwarded to
+; TODO: use env var
 hostname = "http://iotpcsdemo.azureedge.net"
 
 
