Fix typos and scripts

--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -2,10 +2,11 @@
 ; Application log levels: Debug, Info, Warn Error
 loglevel = Info
 
-; The TCP port where the service listen for incoming requests
+; The TCP port where the service listens for incoming requests
 port = 9000
 
 ; The remote endpoint where requests are forwarded to
+; TODO: use env var
 hostname = "http://iotpcsdemo.azureedge.net"
 
 
