Add config settings for max payload size and remote endpoint
* Comment out the code allowing to host static files

--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -1,14 +1,17 @@
 [reverseproxy]
 ; Application log levels: Debug, Info, Warn Error
-loglevel = Info
+loglevel = Debug
 
 ; The TCP port where the service listens for incoming requests
-port = 9000
+port = 80
 
 ; The remote endpoint where requests are forwarded to
-; TODO: use env var
-hostname = "http://iotpcsdemo.azureedge.net"
+; TODO: use PCS_REVERSEPROXY_HOSTNAME env var
+; endpoint = "http://127.0.0.1:10080"
+endpoint = "${REMOTE_ENDPOINT}"
 
+; Limit the request payload size to 128Kb
+maxPayloadSize = 131072
 
 [Logging]
 ; For more information about ASP.NET logging see
