Remove config port and put status endpoint behind feature flag

--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -1,17 +1,17 @@
 [reverseproxy]
-; Application log levels: Debug, Info, Warn Error
-loglevel = Debug
-
-; The TCP port where the service listens for incoming requests
-port = 80
-
 ; The remote endpoint where requests are forwarded to
 ; TODO: use PCS_REVERSEPROXY_HOSTNAME env var
 ; endpoint = "http://127.0.0.1:10080"
 endpoint = "${REMOTE_ENDPOINT}"
 
+; Whether to expose configuration settings in /status
+configStatus = false
+
 ; Limit the request payload size to 128Kb
 maxPayloadSize = 131072
+
+; Application log levels: Debug, Info, Warn, Error
+loglevel = Warn
 
 [Logging]
 ; For more information about ASP.NET logging see
