--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -1,16 +1,21 @@
 [reverseproxy]
 ; The remote endpoint where requests are forwarded to
-; TODO: use PCS_REVERSEPROXY_HOSTNAME env var
-; endpoint = "http://127.0.0.1:10080"
+; The REMOTE_ENDPOINT env var is set on PCS deployments
 endpoint = "${REMOTE_ENDPOINT}"
 
+; Whether to redirect HTTP requests to HTTPS
+; Default: true
+redirectHttpToHttps = false
 ; Whether to expose configuration settings in /status
+; Default: false
 configStatus = false
 
-; Limit the request payload size to 128Kb
+; Limit the request payload size
+; Default: 131072 (128Kb)
 maxPayloadSize = 131072
 
 ; Application log levels: Debug, Info, Warn, Error
+; Default: Warn
 loglevel = Warn
 
 [Logging]
