--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -6,6 +6,15 @@ endpoint = "${REMOTE_ENDPOINT}"
 ; Whether to redirect HTTP requests to HTTPS
 ; Default: true
 redirectHttpToHttps = false
+
+; Whether to tell clients to default to HTTPS in the future
+; Default: true
+strictTransportSecurityEnabled = true
+
+; How long clients should persist the HSTS rule, specified in seconds
+; Default: 30 days (86400 * 30 = 2592000)
+strictTransportSecurityPeriod = 2592000
+
 ; Whether to expose configuration settings in /status
 ; Default: false
 configStatus = false
