--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -5,7 +5,7 @@ endpoint = "${REMOTE_ENDPOINT}"
 
 ; Whether to redirect HTTP requests to HTTPS
 ; Default: true
-redirectHttpToHttps = false
+redirectHttpToHttps = true
 
 ; Whether to tell clients to default to HTTPS in the future
 ; Default: true
