Redirect to HTTPS + Support HSTS + extend /status (#11)
* Check remote endpoint when asked for status
* Redirect HTTP requests to HTTPS
* Support HSTS

--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -1,16 +1,30 @@
 [reverseproxy]
 ; The remote endpoint where requests are forwarded to
-; TODO: use PCS_REVERSEPROXY_HOSTNAME env var
-; endpoint = "http://127.0.0.1:10080"
+; The REMOTE_ENDPOINT env var is set on PCS deployments
 endpoint = "${REMOTE_ENDPOINT}"
 
+; Whether to redirect HTTP requests to HTTPS
+; Default: true
+redirectHttpToHttps = true
+
+; Whether to tell clients to default to HTTPS in the future
+; Default: true
+strictTransportSecurityEnabled = true
+
+; How long clients should persist the HSTS rule, specified in seconds
+; Default: 30 days (86400 * 30 = 2592000)
+strictTransportSecurityPeriod = 2592000
+
 ; Whether to expose configuration settings in /status
+; Default: false
 configStatus = false
 
-; Limit the request payload size to 128Kb
+; Limit the request payload size
+; Default: 131072 (128Kb)
 maxPayloadSize = 131072
 
 ; Application log levels: Debug, Info, Warn, Error
+; Default: Warn
 loglevel = Warn
 
 [Logging]
