Pull all config from env vars

--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -1,31 +1,31 @@
-[reverseproxy]
+[ReverseProxy]
 ; The remote endpoint where requests are forwarded to
 ; The REMOTE_ENDPOINT env var is set on PCS deployments
 endpoint = "${REMOTE_ENDPOINT}"
 
 ; Whether to redirect HTTP requests to HTTPS
 ; Default: true
-redirectHttpToHttps = true
+redirectHttpToHttps = ${?REDIRECT_HTTP_TO_HTTPS}
 
 ; Whether to tell clients to default to HTTPS in the future
 ; Default: true
-strictTransportSecurityEnabled = true
+strictTransportSecurityEnabled = ${?HSTS_ENABLED}
 
 ; How long clients should persist the HSTS rule, specified in seconds
 ; Default: 30 days (86400 * 30 = 2592000)
-strictTransportSecurityPeriod = 2592000
+strictTransportSecurityPeriod = ${?HSTS_PERIOD}
 
 ; Whether to expose configuration settings in /status
 ; Default: false
-configStatus = false
+statusEndpointEnabled = ${?STATUS_ENDPOINT_ENABLED}
 
 ; Limit the request payload size
-; Default: 131072 (128Kb)
-maxPayloadSize = 131072
+; Default: 102400 (100Kb)
+maxPayloadSize = ${?MAX_PAYLOAD_SIZE}
 
 ; Application log levels: Debug, Info, Warn, Error
 ; Default: Warn
-loglevel = Warn
+loglevel = ${?LOG_LEVEL}
 
 [Logging]
 ; For more information about ASP.NET logging see
