Quote log level

--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -25,7 +25,7 @@ maxPayloadSize = ${?MAX_PAYLOAD_SIZE}
 
 ; Application log levels: Debug, Info, Warn, Error
 ; Default: Warn
-loglevel = ${?LOG_LEVEL}
+loglevel = "${?LOG_LEVEL}"
 
 [Logging]
 ; For more information about ASP.NET logging see
