--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -2,7 +2,7 @@
 ; The remote endpoint where requests are forwarded to
 ; The REMOTE_ENDPOINT env var is set on PCS deployments
 endpoint = "${REMOTE_ENDPOINT}"
-thumbprint = "${REMOTE_ENDPOINT_SSL_THUMBPRINT}"
+ssl_cert_thumbprint = "${REMOTE_ENDPOINT_SSL_THUMBPRINT}"
 
 ; Whether to redirect HTTP requests to HTTPS
 ; Default: true
