--- a/ProxyAgent/Properties/launchSettings.json
+++ b/ProxyAgent/Properties/launchSettings.json
@@ -12,19 +12,22 @@
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
-        "REMOTE_ENDPOINT": "http://vm-snjz6.westus.cloudapp.azure.com",
-        "Key": "Value",
+        "REMOTE_ENDPOINT": "https://vm-123456.somecloud.cloudapp.azure.com",
+        "REDIRECT_HTTP_TO_HTTPS": "false",
+        "REMOTE_ENDPOINT_SSL_THUMBPRINT": "0011223344556677889900aabbccddeeff001122",
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "ProxyAgent": {
       "commandName": "Project",
-      "launchBrowser": false,
       "launchUrl": "status",
       "environmentVariables": {
+        "REMOTE_ENDPOINT": "https://vm-123456.somecloud.cloudapp.azure.com",
+        "REDIRECT_HTTP_TO_HTTPS": "false",
+        "REMOTE_ENDPOINT_SSL_THUMBPRINT": "0011223344556677889900aabbccddeeff001122",
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:10081"
+      "applicationUrl": "http://localhost:10080"
     }
   }
 }
