--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,9 @@
 # Auto-detect text files, ensure they use LF.
 * text=auto eol=lf
+
+# Bash scripts
+*.sh text eol=lf
+scripts/build text eol=lf
+scripts/clean-up text eol=lf
+scripts/run text eol=lf
+scripts/git/setup text eol=lf
