Added auto redirect option to disable auto redirect. Solves #28.

--- a/ProxyAgent/appsettings.ini
+++ b/ProxyAgent/appsettings.ini
@@ -28,6 +28,9 @@ maxPayloadSize = ${?MAX_PAYLOAD_SIZE}
 ; Default: Warn
 loglevel = "${?LOG_LEVEL}"
 
+; Automatically follow redirects
+autoRedirect = ${?AUTO_REDIRECT}
+
 [Logging]
 ; For more information about ASP.NET logging see
 ; https://docs.microsoft.com/en-us/aspnet/core/fundamentals/logging
