--- a/scripts/build
+++ b/scripts/build
@@ -30,7 +30,7 @@ run_tests() {
 	# Cleaning up special characters
 	PROJ=$(echo $PROJ | sed 's/[^a-zA-Z\.\/]//g')
 	echo "-- $PROJ"
-	dotnet test --configuration $CONFIGURATION $PROJ_MF
+	dotnet test --configuration $CONFIGURATION $PROJ
     done
 }
 
