--- a/ProxyAgent.Test/ProxyAgent.Test.csproj
+++ b/ProxyAgent.Test/ProxyAgent.Test.csproj
@@ -4,7 +4,7 @@
     <LangVersion>7</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.0.1" />
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="System.ValueTuple" Version="4.5.0" />
